--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <h1>Alex Gong Portfolio</h1>
   <audio controls>
-<source src="NameRecording.mp3" type="audio/ogg">
+<source src="Photo & Audio/" type="audio/ogg">
   </audio>
-  <img src = "babyalex.jpg" width="25%" height="25%">
+  <img src = "Photo & Audio/babyalex.jpg" width="25%" height="25%">
 <h2>I am a junior at Vernon Hills High School taking my first coding class because my Water Polo coach is the teacher.</h2>
 <ul>
   <li>I am on Varsity Water Polo team for the 3rd year where I am the teams starting Goalie.</li>
