--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Alex Gong - Portfolio</title>
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <h1>Alex Gong Portfolio</h1>
   <audio controls>
-<source src="Photo & Audio/" type="audio/ogg">
+    <source src="Photo & Audio/your-audio-file.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
   </audio>
-  <img src = "Photo & Audio/babyalex.jpg" width="25%" height="25%">
-<h2>I am a junior at Vernon Hills High School taking my first coding class because my Water Polo coach is the teacher.</h2>
-<ul>
-  <li>I am on Varsity Water Polo team for the 3rd year where I am the teams starting Goalie.</li>
-  <li>I am also on the Varsity diving team for the 3rd year> Last year I was on the conference and sectional teams.</li>
-  <li>I am also starting Cross Country this year, in order to acheive the schools "3 Sport Senior" badge.</li>
-</ul>
+  <img src="Photo & Audio/babyalex.jpg" width="25%" height="25%" alt="Alex Gong">
+  <h2>I am a junior at Vernon Hills High School taking my first coding class because my Water Polo coach is the teacher.</h2>
+  <ul>
+    <li>I am on the Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
+    <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
+    <li>I am also starting Cross Country this year, in order to achieve the school's "3 Sport Senior" badge.</li>
+  </ul>
   <script src="script.js"></script>
 </body>
 </html>
