--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             Your browser does not support the audio element.
         </audio>
         <img src="Photo & Audio/babyalex.jpg" width="25%" height="25%" alt="Alex Gong">
-        <h2>I am a junior at Vernon Hills High School taking my first coding class because my Water Polo coach is the teacher.</h2>
+        <h2>I am a Senior at Vernon Hills High School taking my first coding class because my Water Polo coach is the teacher.</h2>
         <ul>
             <li>I am on the Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
             <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
