--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background: linear-gradient(135deg, #2c2c54, #1b1b2f);
+            color: #fff;
         }
         .container {
             width: 80%;
@@ -19,20 +20,22 @@
             overflow: hidden;
         }
         header {
-            background: #333;
+            background: rgba(0, 0, 0, 0.8);
             color: #fff;
             padding: 20px 0;
             text-align: center;
+            border-bottom: 2px solid #2c2c54;
         }
         .profile-section {
-            background: #fff;
+            background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             margin: 20px 0;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.3);
+            color: #ddd;
         }
         .profile-section h2 {
-            color: #333;
+            color: #ccc;
             margin-bottom: 10px;
         }
         .profile-section p {
@@ -42,15 +45,15 @@
             margin-top: 20px;
         }
         .experience h3, .certifications h3 {
-            color: #444;
+            color: #b3b3cc;
             margin-bottom: 10px;
         }
         .experience-item, .certification-item {
-            background: #f9f9f9;
+            background: rgba(255, 255, 255, 0.1);
             margin-bottom: 10px;
             padding: 15px;
             border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.1);
+            box-shadow: 0 0 5px rgba(0,0,0,0.2);
         }
     </style>
 </head>
@@ -100,4 +103,9 @@
 
         <section class="profile-section">
             <h2>Licenses & Certifications</h2>
-            <div class
+            <!-- Additional content here -->
+        </section>
+    </div>
+
+</body>
+</html>
