--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
 
         <section class="profile-section">
             <h2>Licenses & Certifications</h2>
-            <!-- Additional content here -->
+            <div class="certifications">
+                <div class="certification-item">
+                    <h3>American Red Cross Lifeguard Certification</h3>
+                    <p><strong>Issued by:</strong> American Red Cross</p>
+                    <p><strong>Status:</strong> Active</p>
+                </div>
+            </div>
         </section>
     </div>
 
