--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #2c2c54, #1b1b2f);
-            color: #f4f4f4;
+            background-color: #f4f4f4;
         }
         .container {
             width: 80%;
@@ -20,52 +19,38 @@
             overflow: hidden;
         }
         header {
-            background: rgba(43, 43, 78, 0.9);
-            color: #ffffff;
+            background: #333;
+            color: #fff;
             padding: 20px 0;
             text-align: center;
-            border-bottom: 2px solid #2c2c54;
         }
         .profile-section {
-            background: rgba(43, 43, 78, 0.9);
+            background: #fff;
             padding: 20px;
             margin: 20px 0;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.3);
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         .profile-section h2 {
-            color: #ffffff;
+            color: #333;
             margin-bottom: 10px;
         }
-        .profile-section p, .experience-item p, .certification-item p {
+        .profile-section p {
             margin: 5px 0;
-            color: #d3d3e6;
         }
         .experience, .certifications {
             margin-top: 20px;
         }
         .experience h3, .certifications h3 {
-            color: #e6e6fa;
+            color: #444;
             margin-bottom: 10px;
         }
         .experience-item, .certification-item {
-            background: rgba(43, 43, 78, 0.8);
+            background: #f9f9f9;
             margin-bottom: 10px;
             padding: 15px;
             border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
-            color: #d3d3e6;
-        }
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
-            color: #d3d3e6;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        h1, h2, h3 {
-            font-weight: bold;
+            box-shadow: 0 0 5px rgba(0,0,0,0.1);
         }
     </style>
 </head>
@@ -115,9 +100,4 @@
 
         <section class="profile-section">
             <h2>Licenses & Certifications</h2>
-            <!-- Additional content here -->
-        </section>
-    </div>
-
-</body>
-</html>
+            <div class
