--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background: linear-gradient(135deg, #2c2c54, #1b1b2f);
+            color: #f4f4f4;
         }
         .container {
             width: 80%;
@@ -19,38 +20,52 @@
             overflow: hidden;
         }
         header {
-            background: #333;
-            color: #fff;
+            background: rgba(43, 43, 78, 0.9);
+            color: #ffffff;
             padding: 20px 0;
             text-align: center;
+            border-bottom: 2px solid #2c2c54;
         }
         .profile-section {
-            background: #fff;
+            background: rgba(43, 43, 78, 0.9);
             padding: 20px;
             margin: 20px 0;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.3);
         }
         .profile-section h2 {
-            color: #333;
+            color: #ffffff;
             margin-bottom: 10px;
         }
-        .profile-section p {
+        .profile-section p, .experience-item p, .certification-item p {
             margin: 5px 0;
+            color: #d3d3e6;
         }
         .experience, .certifications {
             margin-top: 20px;
         }
         .experience h3, .certifications h3 {
-            color: #444;
+            color: #e6e6fa;
             margin-bottom: 10px;
         }
         .experience-item, .certification-item {
-            background: #f9f9f9;
+            background: rgba(43, 43, 78, 0.8);
             margin-bottom: 10px;
             padding: 15px;
             border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.1);
+            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            color: #d3d3e6;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+            color: #d3d3e6;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        h1, h2, h3 {
+            font-weight: bold;
         }
     </style>
 </head>
@@ -100,4 +115,15 @@
 
         <section class="profile-section">
             <h2>Licenses & Certifications</h2>
-            <div class
+            <div class="certifications">
+                <div class="certification-item">
+                    <h3>American Red Cross Lifeguard Certification</h3>
+                    <p><strong>Issued by:</strong> American Red Cross</p>
+                    <p><strong>Status:</strong> Active</p>
+                </div>
+            </div>
+        </section>
+    </div>
+
+</body>
+</html>
