--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #2c2c54, #1b1b2f);
-            color: #f4f4f4;
+            background: linear-gradient(135deg, #2c2c54, #000000);
+            color: #f0f0f0;
+            text-align: center;
         }
         .container {
             width: 80%;
@@ -23,7 +24,6 @@
             background: rgba(43, 43, 78, 0.9);
             color: #ffffff;
             padding: 20px 0;
-            text-align: center;
             border-bottom: 2px solid #2c2c54;
         }
         .profile-section {
@@ -39,7 +39,7 @@
         }
         .profile-section p, .experience-item p, .certification-item p {
             margin: 5px 0;
-            color: #d3d3e6;
+            color: #f0f0f0;
         }
         .experience, .certifications {
             margin-top: 20px;
@@ -58,14 +58,26 @@
         }
         ul {
             list-style-type: disc;
-            padding-left: 20px;
-            color: #d3d3e6;
+            padding-left: 0;
+            color: #f0f0f0;
+            text-align: center;
+            display: inline-block;
         }
         li {
             margin-bottom: 10px;
+            transition: transform 0.3s, color 0.3s;
+        }
+        li:hover {
+            transform: scale(1.1);
+            color: #ffcc00;
+        }
+        img, audio {
+            display: block;
+            margin: 20px auto;
         }
         h1, h2, h3 {
             font-weight: bold;
+            text-align: center;
         }
     </style>
 </head>
