--- a/index.html
+++ b/index.html
@@ -1,141 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Gong - Portfolio</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #2c2c54, #000000);
-            color: #f0f0f0;
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        header {
-            background: rgba(43, 43, 78, 0.9);
-            color: #ffffff;
-            padding: 20px 0;
-            border-bottom: 2px solid #2c2c54;
-        }
-        .profile-section {
-            background: rgba(43, 43, 78, 0.9);
-            padding: 20px;
-            margin: 20px 0;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.3);
-        }
-        .profile-section h2 {
-            color: #ffffff;
-            margin-bottom: 10px;
-        }
-        .profile-section p, .experience-item p, .certification-item p {
-            margin: 5px 0;
-            color: #f0f0f0;
-        }
-        .experience, .certifications {
-            margin-top: 20px;
-        }
-        .experience h3, .certifications h3 {
-            color: #e6e6fa;
-            margin-bottom: 10px;
-        }
-        .experience-item, .certification-item {
-            background: rgba(43, 43, 78, 0.8);
-            margin-bottom: 10px;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
-            color: #d3d3e6;
-        }
-        ul {
-            list-style-type: disc;
-            padding-left: 0;
-            color: #f0f0f0;
-            text-align: center;
-            display: inline-block;
-        }
-        li {
-            margin-bottom: 10px;
-            transition: transform 0.3s, color 0.3s;
-        }
-        li:hover {
-            transform: scale(1.1);
-            color: #ffcc00;
-        }
-        img, audio {
-            display: block;
-            margin: 20px auto;
-        }
-        h1, h2, h3 {
-            font-weight: bold;
-            text-align: center;
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Alex Gong Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background: linear-gradient(135deg, #2c2c54, #000000);
+      color: #f0f0f0;
+      text-align: center;
+    }
+    h1, h2 {
+      font-weight: bold;
+      color: #ffffff;
+    }
+    ul {
+      list-style-type: disc;
+      padding-left: 0;
+      display: inline-block;
+      text-align: left;
+    }
+    li {
+      margin-bottom: 10px;
+      transition: transform 0.3s, color 0.3s;
+    }
+    li:hover {
+      transform: scale(1.1);
+      color: #ffcc00;
+    }
+    img, audio {
+      display: block;
+      margin: 20px auto;
+    }
+  </style>
 </head>
 <body>
-
-    <header>
-        <h1>Alex Gong Portfolio</h1>
-        <audio controls>
-            <source src="Photo & Audio/your-audio-file.ogg" type="audio/ogg">
-            Your browser does not support the audio element.
-        </audio>
-        <img src="Photo & Audio/babyalex.jpg" width="25%" height="25%" alt="Alex Gong">
-        <h2>I am a Senior at Vernon Hills High School taking my first coding class because my Water Polo coach is the teacher.</h2>
-        <ul>
-            <li>I am on the Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
-            <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
-            <li>I am also starting Cross Country this year, in order to achieve the school's "3 Sport Senior" badge.</li>
-        </ul>
-    </header>
-
-    <div class="container">
-        <section class="profile-section">
-            <h2>Experience</h2>
-            <div class="experience">
-                <div class="experience-item">
-                    <h3>Swim Coach - Vernon Hills Park District</h3>
-                    <p><strong>Duration:</strong> Aug 2024 - Present (1 month)</p>
-                    <p><strong>Location:</strong> Vernon Hills, Illinois, United States</p>
-                    <p><strong>Responsibilities:</strong> Coaching</p>
-                </div>
-
-                <div class="experience-item">
-                    <h3>Lifeguard - Vernon Hills Park District</h3>
-                    <p><strong>Duration:</strong> Jun 2022 - Present (2 years 3 months)</p>
-                    <p><strong>Responsibilities:</strong> Lifeguarding, Swim Lessons (Summer 2022)</p>
-                    <p><strong>Skills:</strong> Water Sports and Water Safety Training</p>
-                </div>
-
-                <div class="experience-item">
-                    <h3>Swimming Instructor - Vernon Hills High School</h3>
-                    <p><strong>Duration:</strong> Oct 2021 - Present (2 years 11 months)</p>
-                    <p><strong>Location:</strong> Vernon Hills, Illinois, United States</p>
-                    <p><strong>Responsibilities:</strong> Water Sports, Swim Instruction</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="profile-section">
-            <h2>Licenses & Certifications</h2>
-            <div class="certifications">
-                <div class="certification-item">
-                    <h3>American Red Cross Lifeguard Certification</h3>
-                    <p><strong>Issued by:</strong> American Red Cross</p>
-                    <p><strong>Status:</strong> Active</p>
-                </div>
-            </div>
-        </section>
-    </div>
-
+  <h1>Alex Gong Portfolio</h1>
+  <audio controls>
+    <source src="NameRecording.mp3" type="audio/ogg">
+    Your browser does not support the audio element.
+  </audio>
+  <img src="babyalex.jpg" width="25%" height="25%">
+  <h2>I am a Senior at Vernon Hills High School taking my first coding class because my Water Polo coach is the teacher.</h2>
+  <ul>
+    <li>I am on Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
+    <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
+    <li>I am also starting Cross Country this year, in order to achieve the school's "3 Sport Senior" badge.</li>
+  </ul>
 </body>
 </html>
