--- a/index.html
+++ b/index.html
@@ -1,39 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alex Gong Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Helvetica Neue', Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      background: linear-gradient(135deg, #2c2c54, #000000);
-      color: #f0f0f0;
+      background: linear-gradient(135deg, #2c3e50, #000000);
+      color: #ecf0f1;
       text-align: center;
+      transition: background 0.5s ease-in-out;
     }
-    h1, h2 {
-      font-weight: bold;
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 20px;
       color: #ffffff;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+    h2 {
+      font-size: 1.5em;
+      margin-bottom: 20px;
+      color: #bdc3c7;
+      font-weight: 300;
     }
     ul {
-      list-style-type: disc;
-      padding-left: 0;
+      list-style-type: none;
+      padding: 0;
       display: inline-block;
       text-align: left;
     }
     li {
-      margin-bottom: 10px;
-      transition: transform 0.3s, color 0.3s;
+      margin-bottom: 15px;
+      font-size: 1.2em;
+      padding: 10px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 8px;
+      transition: transform 0.3s ease, background 0.3s ease;
     }
     li:hover {
-      transform: scale(1.1);
-      color: #ffcc00;
+      transform: translateX(10px) scale(1.05);
+      background: rgba(255, 255, 255, 0.2);
+      color: #f39c12;
     }
-    img, audio {
+    img {
       display: block;
+      margin: 30px auto;
+      border-radius: 50%;
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+      transition: transform 0.3s ease-in-out;
+    }
+    img:hover {
+      transform: scale(1.1);
+    }
+    audio {
       margin: 20px auto;
+      border-radius: 8px;
+      background-color: #2c3e50;
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
     }
   </style>
 </head>
@@ -46,7 +73,7 @@
   <img src="babyalex.jpg" width="25%" height="25%">
   <h2>I am a Senior at Vernon Hills High School taking my first coding class because my Water Polo coach is the teacher.</h2>
   <ul>
-    <li>I am on Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
+    <li>I am on the Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
     <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
     <li>I am also starting Cross Country this year, in order to achieve the school's "3 Sport Senior" badge.</li>
   </ul>
