--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       background-color: #2c3e50;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
     }
-  </style>
+  </styles>
 </head>
 <body>
   <h1>Alex Gong Portfolio</h1>
