--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img src="Photo & Audio/babyalex.jpg" width="25%" height="25%" alt="Alex Gong">
   <h2>I am a Senior at Vernon Hills High School taking my first coding class because my Water Polo coach is the teacher.</h2>
   <ul>
-    <li>I am on the Varsity Water Polo team for the 3rd yearT where I am the team's starting Goalie.</li>
+    <li>I am on the Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
     <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
     <li>I am also starting Cross Country this year, in order to achieve the school's "3 Sport Senior" badge.</li>
   </ul>
