--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <ul>
     <li>I am on the Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
     <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
-    <li>I am also starting Cross Country this year, in order to achieve the school's "3 Sport Senior" badge.</li>
+    <li>I work as a Lifegaurd for the VHPD, teach swim lessons at my highschool, and I coach part of the VHPD swim team that I swam on as a kid..</li>
   </ul>
   <script src="script.js"></script>
 </body>
