--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
   <ul>
     <li>I am on the Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
     <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
-    <li>I work as a Lifegaurd for the VHPD, teach swim lessons at my highschool, and I coach part of the VHPD swim team that I swam on as a kid..</li>
+    <li>I work as a Lifeguard for the VHPD, teach swim lessons at my highschool, and I coach part of the VHPD swim team that I swam on as a kid.</li>
   </ul>
+  
+  <!-- New Link to "Learn To Code 1" Page -->
+  <h3><a href="learn_to_code_1.html">Learn To Code 1</a></h3>
+  
   <script src="script.js"></script>
 </body>
 </html>
