--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -13,8 +13,8 @@
     <li><a href="Unit 1/file1.html">File 1</a></li>
     <li><a href="Unit 1/file2.html">File 2</a></li>
     <li><a href="Unit 1/file3.html">File 3</a></li>
-    <!-- Add more files as needed -->
-  </ul>
+    <li><a href="Unit 1/file4.html">File 4</a></li>  
+</ul>
 
   <h3><a href="index.html">Back to Homepage</a></h3>
 </body>
