--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -10,10 +10,10 @@
   <h1>Learn To Code - Unit 1</h1>
   <h2>Files from Unit 1</h2>
   <ul>
-    <li><a href="Unit 1/file1.html">File 1</a></li>
-    <li><a href="Unit 1/file2.html">File 2</a></li>
-    <li><a href="Unit 1/file3.html">File 3</a></li>
-    <li><a href="Unit 1/file4.html">File 4</a></li>  
+    <li><a href="Unit 1/Picture 1.png">Picture 1</a></li>
+    <li><a href="Unit 1/Picture 2 Part 1.png">Picture 2 Part 1</a></li>
+    <li><a href="Unit 1/Picture 2 Part 2.png">Picture 2 Part 2</a></li>
+    <li><a href="Unit 1/Video 1.mov">Video</a></li>  
 </ul>
 
   <h3><a href="index.html">Back to Homepage</a></h3>
