--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Learn To Code 1</title>
   <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="styles.css" rel="stylesheet" type="text/css"> <!-- Added styles.css -->
 </head>
 <body>
   <h1>Learn To Code - Unit 1</h1>
@@ -14,7 +15,7 @@
     <li><a href="Unit 1/Picture 2 Part 1.png">Picture 2 Part 1</a></li>
     <li><a href="Unit 1/Picture 2 Part 2.png">Picture 2 Part 2</a></li>
     <li><a href="Unit 1/Video 1.mov">Video</a></li>  
-</ul>
+  </ul>
 
   <h3><a href="index.html">Back to Homepage</a></h3>
 </body>
