--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -12,8 +12,7 @@
   <h2>Files from Unit 1</h2>
   <ul>
     <li><a href="Unit 1/Picture 1.png">Picture 1</a></li>
-    <li><a href="Unit 1/Picture 2 Part 1.png">Picture 2 Part 1</a></li>
-    <li><a href="Unit 1/Picture 2 Part 2.png">Picture 2 Part 2</a></li>
+    <li><a href="Unit 1/Picture 2 Part 2.png">Picture 2</a></li>
     <li><a href="Unit 1/Video 1.mov">Video</a></li>  
   </ul>
 
