--- a/index.html
+++ b/index.html
@@ -6,8 +6,33 @@
   <title>Alex Gong - Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <link href="styles.css" rel="stylesheet" type="text/css">
+  <style>
+    /* Add styles for the navigation bar */
+    nav {
+      background-color: #333;
+      overflow: hidden;
+    }
+    nav a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+    }
+    nav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+  </style>
 </head>
 <body>
+  <!-- Navigation Bar -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="learn_to_code_1.html">Learn To Code 1</a>
+  </nav>
+
   <h1>Alex Gong Portfolio</h1>
   <audio controls>
     <source src="Photo & Audio/NameRecording.mp3" type="audio/ogg">
@@ -17,11 +42,8 @@
   <ul>
     <li>I am on the Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
     <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
-    <li>I work as a Lifeguard for the VHPD, teach swim lessons at my highschool, and I coach part of the VHPD swim team that I swam on as a kid.</li>
+    <li>I work as a Lifegaurd for the VHPD, teach swim lessons at my highschool, and I coach part of the VHPD swim team that I swam on as a kid..</li>
   </ul>
-  
-  <!-- New Link to "Learn To Code 1" Page -->
-  <h3><a href="learn_to_code_1.html">Learn To Code 1</a></h3>
   
   <script src="script.js"></script>
 </body>
