--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -5,17 +5,78 @@
   <meta name="viewport" content="width=device-width">
   <title>Learn To Code 1</title>
   <link href="style.css" rel="stylesheet" type="text/css">
-  <link href="styles.css" rel="stylesheet" type="text/css"> <!-- Added styles.css -->
+  <style>
+    nav {
+      background-color: #333;
+      overflow: hidden;
+    }
+    nav a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+    }
+    nav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    /* Styling for the media section */
+    .media {
+      margin: 20px 0;
+    }
+    .media img, .media video {
+      width: 50%;
+      height: auto;
+    }
+    ul {
+      list-style-type: disc;
+      margin-left: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Learn To Code - Unit 1</h1>
-  <h2>Files from Unit 1</h2>
-  <ul>
-    <li><a href="Unit 1/Picture 1.png">Picture 1</a></li>
-    <li><a href="Unit 1/Picture 2 Part 2.png">Picture 2</a></li>
-    <li><a href="Unit 1/Video 1.mov">Video</a></li>  
-  </ul>
+  <!-- Navigation Bar -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="learn_to_code_1.html">Learn To Code 1</a>
+  </nav>
 
-  <h3><a href="index.html">Back to Homepage</a></h3>
+  <h1>Learn To Code - Unit 1</h1>
+
+  <!-- First Picture -->
+  <div class="media">
+    <img src="Photo & Audio/Picture 1.png" alt="Picture 1">
+    <ul>
+      <li>Bullet point 1 about Picture 1.</li>
+      <li>Bullet point 2 about Picture 1.</li>
+      <li>Bullet point 3 about Picture 1.</li>
+    </ul>
+  </div>
+
+  <!-- Second Picture -->
+  <div class="media">
+    <img src="Photo & Audio/Picture 2 Part 2.png" alt="Picture 2 Part 2">
+    <ul>
+      <li>Bullet point 1 about Picture 2.</li>
+      <li>Bullet point 2 about Picture 2.</li>
+      <li>Bullet point 3 about Picture 2.</li>
+    </ul>
+  </div>
+
+  <!-- Video -->
+  <div class="media">
+    <video controls>
+      <source src="Photo & Audio/Video 1.mov" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <ul>
+      <li>Bullet point 1 about Video 1.</li>
+      <li>Bullet point 2 about Video 1.</li>
+      <li>Bullet point 3 about Video 1.</li>
+    </ul>
+  </div>
+  
 </body>
 </html>
