--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -6,8 +6,19 @@
   <title>Learn To Code 1</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <style>
+    /* Apply the black and indigo theme */
+    body {
+      background-color: #000; /* Black background */
+      color: #4b0082; /* Indigo text color */
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    h1, h2 {
+      color: #4b0082; /* Indigo headers */
+    }
     nav {
-      background-color: #333;
+      background-color: #333; /* Dark gray/black nav bar */
       overflow: hidden;
     }
     nav a {
@@ -19,20 +30,26 @@
       text-decoration: none;
     }
     nav a:hover {
-      background-color: #ddd;
-      color: black;
+      background-color: #4b0082; /* Indigo hover effect */
+      color: white;
     }
-    /* Styling for the media section */
     .media {
       margin: 20px 0;
+      text-align: center; /* Center images and videos */
     }
     .media img, .media video {
       width: 50%;
       height: auto;
+      border: 2px solid #4b0082; /* Indigo border for media */
     }
     ul {
       list-style-type: disc;
       margin-left: 20px;
+      color: white; /* White bullet points */
+    }
+    /* Styling for bullet points */
+    li {
+      margin-bottom: 5px;
     }
   </style>
 </head>
