--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -5,53 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Learn To Code 1</title>
   <link href="style.css" rel="stylesheet" type="text/css">
-  <style>
-    /* Apply the black and indigo theme */
-    body {
-      background-color: #000; /* Black background */
-      color: #4b0082; /* Indigo text color */
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    h1, h2 {
-      color: #4b0082; /* Indigo headers */
-    }
-    nav {
-      background-color: #333; /* Dark gray/black nav bar */
-      overflow: hidden;
-    }
-    nav a {
-      float: left;
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 14px 20px;
-      text-decoration: none;
-    }
-    nav a:hover {
-      background-color: #4b0082; /* Indigo hover effect */
-      color: white;
-    }
-    .media {
-      margin: 20px 0;
-      text-align: center; /* Center images and videos */
-    }
-    .media img, .media video {
-      width: 50%;
-      height: auto;
-      border: 2px solid #4b0082; /* Indigo border for media */
-    }
-    ul {
-      list-style-type: disc;
-      margin-left: 20px;
-      color: white; /* White bullet points */
-    }
-    /* Styling for bullet points */
-    li {
-      margin-bottom: 5px;
-    }
-  </style>
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <!-- Navigation Bar -->
@@ -74,7 +28,7 @@
 
   <!-- Second Picture -->
   <div class="media">
-    <img src="Photo & Audio/Picture 2 Part 2.png" alt="Picture 2 Part 2">
+    <img src="Photo & Audio/Picture 2 Part 2.png" alt="Picture 2">
     <ul>
       <li>Bullet point 1 about Picture 2.</li>
       <li>Bullet point 2 about Picture 2.</li>
