--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -28,7 +28,7 @@
 
   <!-- Second Picture -->
   <div class="media">
-    <img src="Photo & Audio/Picture 2 Part 2.png" alt="Picture 2">
+    <img src="Photo & Audio/Picture 2 Part 2.png" alt="Picture 2 Part 2">
     <ul>
       <li>Bullet point 1 about Picture 2.</li>
       <li>Bullet point 2 about Picture 2.</li>
