--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -6,6 +6,20 @@
   <title>Learn To Code 1</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <link href="styles.css" rel="stylesheet" type="text/css">
+  <style>
+    /* Shrink the image size to 40% of the original */
+    .media img {
+      width: 40%; /* Shrinks images to 40% of their original size */
+      height: auto; /* Maintain aspect ratio */
+      border: 2px solid #4b0082; /* Indigo border */
+    }
+
+    .media video {
+      width: 50%; /* Adjust video size */
+      height: auto;
+      border: 2px solid #4b0082; /* Indigo border */
+    }
+  </style>
 </head>
 <body>
   <!-- Navigation Bar -->
@@ -39,7 +53,7 @@
   <!-- Video -->
   <div class="media">
     <video controls>
-      <source src="Photo & Audio/Video 1.mov" type="video/mp4">
+      <source src="Photo & Audio/Video 1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <ul>
