--- a/index.html
+++ b/index.html
@@ -8,21 +8,26 @@
   <link href="styles.css" rel="stylesheet" type="text/css">
   <style>
     /* Add styles for the navigation bar */
-    nav {
-      background-color: #333;
-      overflow: hidden;
-    }
-    nav a {
-      float: left;
-      display: block;
-      color: white;
-      text-align: center;
-      padding: 14px 20px;
-      text-decoration: none;
-    }
-    nav a:hover {
-      background-color: #ddd;
-      color: black;
+   
+nav {
+  background-color: #000; /* Set to black */
+  overflow: hidden;
+}
+
+nav a {
+  float: left;
+  display: block;
+  color: white; /* Set link text color to white */
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+  font-family: Arial, sans-serif;
+}
+
+nav a:hover {
+  background-color: #4b0082; /* Indigo hover effect */
+  color: white;
+}
     }
   </style>
 </head>
