--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -26,6 +26,27 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="learn_to_code_1.html">Learn To Code 1</a>
+ 
+nav {
+  background-color: #000; /* Set to black */
+  overflow: hidden;
+}
+
+nav a {
+  float: left;
+  display: block;
+  color: white; /* Set link text color to white */
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+  font-family: Arial, sans-serif;
+}
+
+nav a:hover {
+  background-color: #4b0082; /* Indigo hover effect */
+  color: white;
+}
+
   </nav>
 
   <h1>Learn To Code - Unit 1</h1>
