--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -19,6 +19,17 @@
       height: auto;
       border: 2px solid #4b0082; /* Indigo border */
     }
+
+    /* Style for the new header */
+    h2 {
+      font-size: 1.5em; /* Make the header larger than the bullet points */
+      margin-bottom: 10px;
+    }
+
+    /* General font size for list items */
+    ul li {
+      font-size: 1em; /* Keep list items at default size */
+    }
   </style>
 </head>
 <body>
@@ -26,18 +37,20 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="learn_to_code_1.html">Learn To Code 1</a>
- 
   </nav>
 
   <h1>Learn To Code - Unit 1</h1>
+
+  <!-- New Header -->
+  <h2>In Learn To Code 1, we learned about how to use 9 of the basic coding principles. Below I have put 2 snapshots of my code, and a video of the coding working. I have also written short definitions about each of these 9 principles.</h2>
 
   <!-- First Picture -->
   <div class="media">
     <img src="Photo & Audio/Picture 1.png" alt="Picture 1">
     <ul>
-      <li>Bullet point 1 about Picture 1.</li>
-      <li>Bullet point 2 about Picture 1.</li>
-      <li>Bullet point 3 about Picture 1.</li>
+      <li>Commands tell the computer what to do.</li>
+      <li>For loops repeat actions a set number of times.</li>
+      <li>Conditionals run code based on true or false conditions.</li>
     </ul>
   </div>
 
@@ -45,9 +58,9 @@
   <div class="media">
     <img src="Photo & Audio/Picture 2 Part 2.png" alt="Picture 2 Part 2">
     <ul>
-      <li>Bullet point 1 about Picture 2.</li>
-      <li>Bullet point 2 about Picture 2.</li>
-      <li>Bullet point 3 about Picture 2.</li>
+      <li>Logical operators combine conditions to make decisions.</li>
+      <li>Variables store values that change in your code.</li>
+      <li>Types define the kind of data a variable holds.</li>
     </ul>
   </div>
 
@@ -57,11 +70,11 @@
       <source src="Photo & Audio/Video 1.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>Bullet point 1 about Video 1.</li>
-      <li>Bullet point 2 about Video 1.</li>
-      <li>Bullet point 3 about Video 1.</li>
+      <li>Initialization sets the starting value for a variable.</li>
+      <li>Functions group code to perform a specific task.</li>
+      <li>Parameters are inputs passed to functions to customize their behavior.</li>
     </ul>
   </div>
-  
+
 </body>
 </html>
