--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ nav a:hover {
   <nav>
     <a href="index.html">Home</a>
     <a href="learn_to_code_1.html">Learn To Code 1</a>
+    <a href="learn_to_code_2.html">Learn To Code 2</a>
   </nav>
 
   <h1>Alex Gong Portfolio</h1>
