--- a/learn_to_code_2.html
+++ b/learn_to_code_2.html
@@ -36,6 +36,7 @@
   <!-- Navigation Bar -->
   <nav>
     <a href="index.html">Home</a>
+    <a href="learn_to_code_1.html">Learn To Code 1</a>
     <a href="learn_to_code_2.html">Learn To Code 2</a>
   </nav>
 
