--- a/learn_to_code_2.html
+++ b/learn_to_code_2.html
@@ -40,7 +40,7 @@
     <a href="learn_to_code_2.html">Learn To Code 2</a>
   </nav>
 
-  <h1>Learn To Code - Unit 1</h1>
+  <h1>Learn To Code - Unit 2</h1>
 
   <!-- New Header -->
   <h2>In Learn To Code 2, we learned some new principles and expanded on the ones we learned about in Learn To Code 1. I have provided short descriptions about these new and expanded principles below, along with 2 snapshots of my code, and a video of it in action.</h2>
@@ -49,8 +49,8 @@
   <div class="media">
     <img src="Photo & Audio/Picture 3.png" alt="Picture 1">
     <ul>
-      <li>Variables.</li>
-      <li>Types.</li>
+      <li>Variables, we now have more, different values we need to store to later change our code.</li>
+      <li>Types define the data these new variables can hold.</li>
     </ul>
   </div>
 
@@ -58,8 +58,8 @@
   <div class="media">
     <img src="Photo & Audio/Picture 4.png" alt="Picture 2 Part 2">
     <ul>
-      <li>Initialization.</li>
-      <li>Parameters.</li>
+      <li>Initialization, we now have many new and different values to start a variable.</li>
+      <li>Parameters, we also have more of these to customize functions different behaviors.</li>
     </ul>
   </div>
 
@@ -69,8 +69,8 @@
       <source src="Photo & Audio/Video 2.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>World Building.</li>
-      <li>Arrays.</li>
+      <li>World Building is how we would add different blocks, characters, and items into the map.</li>
+      <li>Arrays help organize multiple pieces of data in an ordered way..</li>
     </ul>
   </div>
 
