--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ nav a:hover {
     <a href="index.html">Home</a>
     <a href="learn_to_code_1.html">Learn To Code 1</a>
     <a href="learn_to_code_2.html">Learn To Code 2</a>
+    <a href="keep_going_with_apps.html">Keep Going With Apps</a>
   </nav>
 
   <h1>Alex Gong Portfolio</h1>
