--- a/keep_going_with_apps.html
+++ b/keep_going_with_apps.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Learn To Code 2</title>
+  <title>Keep Going With Apps</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <link href="styles.css" rel="stylesheet" type="text/css">
   <style>
@@ -41,37 +41,37 @@
     <a href="keep_going_with_apps.html">Keep Going With Apps</a>
   </nav>
 
-  <h1>Learn To Code - Unit 2</h1>
+  <h1>Keep Going With Apps</h1>
 
   <!-- New Header -->
-  <h2>In Learn To Code 2, we learned some new principles and expanded on the ones we learned about in Learn To Code 1. I have provided short descriptions about these new and expanded principles below, along with 2 snapshots of my code, and a video of it in action.</h2>
+  <h2>In "Keep Going With Apps", we learned .</h2>
 
   <!-- First Picture -->
   <div class="media">
-    <img src="Photo & Audio/Picture 3.png" alt="Picture 1">
+    <img src="Photo & Audio/Picture 5.png" alt="Picture 1">
     <ul>
-      <li>Variables, we now have more, different values we need to store to later change our code.</li>
-      <li>Types define the data these new variables can hold.</li>
+      <li>BP1</li>
+      <li>BP2</li>
     </ul>
   </div>
 
   <!-- Second Picture -->
   <div class="media">
-    <img src="Photo & Audio/Picture 4.png" alt="Picture 2 Part 2">
+    <img src="Photo & Audio/Picture 6.png" alt="Picture 2 Part 2">
     <ul>
-      <li>Initialization, we now have many new and different values to start a variable.</li>
-      <li>Parameters, we also have more of these to customize functions different behaviors.</li>
+      <li>BP3</li>
+      <li>BP4</li>
     </ul>
   </div>
 
   <!-- Video -->
   <div class="media">
     <video controls>
-      <source src="Photo & Audio/Video 2.mp4" type="video/mp4">
+      <source src="Photo & Audio/Video 3.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>World Building is how we would add different blocks, characters, and items into the map.</li>
-      <li>Arrays help organize multiple pieces of data in an ordered way.</li>
+      <li>BP5</li>
+      <li>BP6</li>
     </ul>
   </div>
 
