--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -38,6 +38,7 @@
     <a href="index.html">Home</a>
     <a href="learn_to_code_1.html">Learn To Code 1</a>
     <a href="learn_to_code_2.html">Learn To Code 2</a>
+    <a href="keep_going_with_apps.html">Keep Going With Apps</a>
   </nav>
 
   <h1>Learn To Code - Unit 1</h1>
