--- a/keep_going_with_apps.html
+++ b/keep_going_with_apps.html
@@ -50,8 +50,8 @@
   <div class="media">
     <img src="Photo & Audio/Picture 5.png" alt="Picture 1">
     <ul>
-      <li>BP1</li>
-      <li>BP2</li>
+      <li>App Development Continuation: The lesson encourages users to continue exploring the fundamentals of app development, expanding on basic concepts covered in earlier sessions.</li>
+      <li>Interactive Coding Challenges: Learners are presented with hands-on coding tasks to build and enhance their own applications, fostering a deeper understanding of Swift programming.</li>
     </ul>
   </div>
 
@@ -59,8 +59,8 @@
   <div class="media">
     <img src="Photo & Audio/Picture 6.png" alt="Picture 2 Part 2">
     <ul>
-      <li>BP3</li>
-      <li>BP4</li>
+      <li>Advanced Features: The lesson introduces more complex app functionalities, such as navigation between views, handling user input, and incorporating additional user interface elements.</li>
+      <li>Problem-Solving Focus: Emphasis is placed on improving problem-solving skills through coding challenges, encouraging learners to troubleshoot and refine their code.</li>
     </ul>
   </div>
 
@@ -70,8 +70,8 @@
       <source src="Photo & Audio/Video 3.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>BP5</li>
-      <li>BP6</li>
+      <li>Personalization and Creativity: Users are prompted to customize their apps with their own ideas, fostering creativity while still adhering to programming best practices.</li>
+      <li>Encouragement for Further Learning: The module serves as a stepping stone for more advanced app development, encouraging learners to apply their skills in real-world projects and continue exploring app-building possibilities.</li>
     </ul>
   </div>
 
