--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -39,6 +39,7 @@
     <a href="learn_to_code_1.html">Learn To Code 1</a>
     <a href="learn_to_code_2.html">Learn To Code 2</a>
     <a href="keep_going_with_apps.html">Keep Going With Apps</a>
+    <a href="more_projects.html">More Projects</a>
   </nav>
 
   <h1>Learn To Code - Unit 1</h1>
