--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ nav a:hover {
     <a href="learn_to_code_1.html">Learn To Code 1</a>
     <a href="learn_to_code_2.html">Learn To Code 2</a>
     <a href="keep_going_with_apps.html">Keep Going With Apps</a>
+    <a href="more_projects.html">More Projects</a>
   </nav>
 
   <h1>Alex Gong Portfolio</h1>
