--- a/more_projects.html
+++ b/more_projects.html
@@ -51,8 +51,8 @@
   <div class="media">
     <img src="Photo & Audio/Spiral Picture.png" alt="Picture 1">
     <ul>
-      <li>BP1.</li>
-      <li>BP2.</li>
+      <li>"Spirals" on Apples Playground app helps users learn Swift by guiding them to create intricate geometric patterns through coding. It teaches basic programming concepts like loops and functions, encouraging creativity through visual results.</li>
+      <li>As users write code to manipulate the spirals, they receive instant visual feedback, allowing them to understand how different coding instructions affect the patterns, making it an engaging way to learn programming fundamentals.</li>
     </ul>
   </div>
 
@@ -60,8 +60,8 @@
   <div class="media">
     <img src="Photo & Audio/Battleship Picture.png" alt="Picture 2 Part 2">
     <ul>
-      <li>BP3.</li>
-      <li>BP4.</li>
+      <li>The Battleship game on Apple's Playground allows users to code and play a digital version of the classic board game, where they write code to position ships and track hits or misses against an opponent.    </li>
+      <li>Players use Swift code to implement strategies, such as placing ships in hard-to-hit locations and using logic to target enemy ships, reinforcing conditional statements and loops.</li>
     </ul>
   </div>
 
@@ -71,8 +71,8 @@
       <source src="Photo & Audio/Battleship Video.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>BP5.</li>
-      <li>BP6.</li>
+      <li>The game teaches turn-based logic by having players alternate between coding their moves and responding to the opponent's attacks, emphasizing the importance of decision-making and timing in gameplay.</li>
+      <li>Users can modify the game's grid size, ship positions, and attack patterns through code, offering flexibility to create varied levels of difficulty while honing problem-solving and debugging skills.</li>
     </ul>
   </div>
 
