--- a/keep_going_with_apps.html
+++ b/keep_going_with_apps.html
@@ -39,7 +39,8 @@
     <a href="learn_to_code_1.html">Learn To Code 1</a>
     <a href="learn_to_code_2.html">Learn To Code 2</a>
     <a href="keep_going_with_apps.html">Keep Going With Apps</a>
-    <a href="more_projects.html">More Projects</a>
+    <a href="spirals_and_battleship.html">Spirals and Battleship</a>
+    <a href="car_clicker.html">Car Clicker</a>
   </nav>
 
   <h1>Keep Going With Apps</h1>
