--- a/car_clicker.html
+++ b/car_clicker.html
@@ -52,8 +52,8 @@
   <div class="media">
     <img src="Photo & Audio/CCCode.mp4" alt="Picture 1">
     <ul>
-      <li>BP</li>
-      <li>BP</li>
+      <li>The game increases cars owned every second based on the number of manufacturers, which reflect automatic upgrades.</li>
+      <li>The mechanic upgrade increases the number of cars earned per click, with the cost rising by 50 cars for each upgrade.</li>
     </ul>
   </div>
 
@@ -61,8 +61,8 @@
   <div class="media">
     <img src="Photo & Audio/CCGameplay.mp4" alt="Picture 2 Part 2">
     <ul>
-      <li>BP</li>
-      <li>BP</li>
+      <li>Players can click an image of one of my favorite cars, which changes randomly from a list of cars each time they click.</li>
+      <li>The game's background and button designs change color based on whether the player has enough cars to purchase an upgrade.</li>
     </ul>
   </div>
 
