--- a/spirals_and_battleship.html
+++ b/spirals_and_battleship.html
@@ -50,7 +50,7 @@
 
   <!-- First Picture -->
   <div class="media">
-    <img src="Photo & Audio/Spiral Picture.png" alt="Picture 1">
+    <img src="Photo & Audio/Spiral Picture.png" alt="Spiral Picture">
     <ul>
       <li>"Spirals" on Apples Playground app helps users learn Swift by guiding them to create intricate geometric patterns through coding. It teaches basic programming concepts like loops and functions, encouraging creativity through visual results.</li>
       <li>As users write code to manipulate the spirals, they receive instant visual feedback, allowing them to understand how different coding instructions affect the patterns, making it an engaging way to learn programming fundamentals.</li>
@@ -59,7 +59,7 @@
 
   <!-- Second Picture -->
   <div class="media">
-    <img src="Photo & Audio/Battleship Picture.png" alt="Picture 2 Part 2">
+    <img src="Photo & Audio/Battleship Picture.png" alt="Battleship Picture">
     <ul>
       <li>The Battleship game on Apple's Playground allows users to code and play a digital version of the classic board game, where they write code to position ships and track hits or misses against an opponent.    </li>
       <li>Players use Swift code to implement strategies, such as placing ships in hard-to-hit locations and using logic to target enemy ships, reinforcing conditional statements and loops.</li>
@@ -69,7 +69,7 @@
   <!-- Video -->
   <div class="media">
     <video controls>
-      <source src="Photo & Audio/Battleship Video.mp4" type="video/mp4">
+      <source src="Photo & Audio/Battleship Video.mp4" type="Battleship Video">
     </video>
     <ul>
       <li>The game teaches turn-based logic by having players alternate between coding their moves and responding to the opponent's attacks, emphasizing the importance of decision-making and timing in gameplay.</li>
