--- a/keep_going_with_apps.html
+++ b/keep_going_with_apps.html
@@ -50,7 +50,7 @@
 
   <!-- First Picture -->
   <div class="media">
-    <img src="Photo & Audio/Picture 5.png" alt="Picture 1">
+    <img src="Photo & Audio/Picture 5.png" alt="Picture 5">
     <ul>
       <li>App Development Continuation: The lesson encourages users to continue exploring the fundamentals of app development, expanding on basic concepts covered in earlier sessions.</li>
       <li>Interactive Coding Challenges: Learners are presented with hands-on coding tasks to build and enhance their own applications, fostering a deeper understanding of Swift programming.</li>
@@ -59,7 +59,7 @@
 
   <!-- Second Picture -->
   <div class="media">
-    <img src="Photo & Audio/Picture 6.png" alt="Picture 2 Part 2">
+    <img src="Photo & Audio/Picture 6.png" alt="Picture 6">
     <ul>
       <li>Advanced Features: The lesson introduces more complex app functionalities, such as navigation between views, handling user input, and incorporating additional user interface elements.</li>
       <li>Problem-Solving Focus: Emphasis is placed on improving problem-solving skills through coding challenges, encouraging learners to troubleshoot and refine their code.</li>
@@ -69,7 +69,7 @@
   <!-- Video -->
   <div class="media">
     <video controls>
-      <source src="Photo & Audio/Video 3.mp4" type="video/mp4">
+      <source src="Photo & Audio/Video 3.mp4" type="Video 3">
     </video>
     <ul>
       <li>Personalization and Creativity: Users are prompted to customize their apps with their own ideas, fostering creativity while still adhering to programming best practices.</li>
