--- a/learn_to_code_2.html
+++ b/learn_to_code_2.html
@@ -50,7 +50,7 @@
 
   <!-- First Picture -->
   <div class="media">
-    <img src="Photo & Audio/Picture 3.png" alt="Picture 1">
+    <img src="Photo & Audio/Picture 3.png" alt="Picture 3">
     <ul>
       <li>Variables, we now have more, different values we need to store to later change our code.</li>
       <li>Types define the data these new variables can hold.</li>
@@ -59,7 +59,7 @@
 
   <!-- Second Picture -->
   <div class="media">
-    <img src="Photo & Audio/Picture 4.png" alt="Picture 2 Part 2">
+    <img src="Photo & Audio/Picture 4.png" alt="Picture 4">
     <ul>
       <li>Initialization, we now have many new and different values to start a variable.</li>
       <li>Parameters, we also have more of these to customize functions different behaviors.</li>
@@ -69,7 +69,7 @@
   <!-- Video -->
   <div class="media">
     <video controls>
-      <source src="Photo & Audio/Video 2.mp4" type="video/mp4">
+      <source src="Photo & Audio/Video 2.mp4" type="Video 2">
     </video>
     <ul>
       <li>World Building is how we would add different blocks, characters, and items into the map.</li>
