--- a/learn_to_code_1.html
+++ b/learn_to_code_1.html
@@ -41,6 +41,7 @@
     <a href="keep_going_with_apps.html">Keep Going With Apps</a>
     <a href="spirals_and_battleship.html">Spirals and Battleship</a>
     <a href="car_clicker.html">Car Clicker</a>
+    <a href="Xcode.html">Login & Shop</a>
   </nav>
 
   <h1>Learn To Code - Unit 1</h1>
