--- a/keep_going_with_apps.html
+++ b/keep_going_with_apps.html
@@ -41,6 +41,7 @@
     <a href="keep_going_with_apps.html">Keep Going With Apps</a>
     <a href="spirals_and_battleship.html">Spirals and Battleship</a>
     <a href="car_clicker.html">Car Clicker</a>
+    <a href="Xcode.html">Login & Shop</a>
   </nav>
 
   <h1>Keep Going With Apps</h1>
