--- a/Xcode.html
+++ b/Xcode.html
@@ -51,7 +51,7 @@
 
   <!-- Code Video -->
   <div class="media">
-    <video id="CCCode" controls>
+    <video id="ShopVideo" controls>
       <source src="Photo & Audio/ShopVideo.mp4" type="video/mp4">
     </video>
     <ul>
@@ -62,7 +62,7 @@
 
   <!-- Game Video -->
   <div class="media">
-    <video id="CCGameplay" controls>
+    <video id="LoginVideo" controls>
       <source src="Photo & Audio/LoginVideo.mp4" type="video/mp4">
     </video>
     <ul>
