--- a/Xcode.html
+++ b/Xcode.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Login & Shop</title>
+  <title>Spirals and Battleship</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <link href="styles.css" rel="stylesheet" type="text/css">
   <style>
@@ -43,6 +43,7 @@
     <a href="car_clicker.html">Car Clicker</a>
     <a href="Xcode.html">Login & Shop</a>
   </nav>
+
 
   <h1>Login & Shop</h1>
 
