--- a/Xcode.html
+++ b/Xcode.html
@@ -48,7 +48,7 @@
   <h1>Login & Shop</h1>
 
   <!-- New Header -->
-  <h2>On XCode I have made two working apps. </h2>
+  <h2>On Xcode, I have created two working apps, both revolving around my personal interests and information. One is a login app that allows the user to access their information through a login screen. The other app is a webstore for people to purchase the things I build in woodshop.</h2>
 
   <!-- Code Video -->
   <div class="media">
@@ -56,8 +56,8 @@
       <source src="Photo & Audio/ShopVideo.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>BP1</li>
-      <li>BP2</li>
+      <li>I created an app for people to purchase my creations from my woodshop class. While it is not a real place to buy things from, it certainly could be.</li>
+      <li>The app includes a main page where you select which project you would like, a page for calculating your total payment, and a checkout screen.</li>
     </ul>
   </div>
 
@@ -67,8 +67,8 @@
       <source src="Photo & Audio/LoginVideo.mp4" type="video/mp4">
     </video>
     <ul>
-      <li>BP3</li>
-      <li>BP4</li>
+      <li>In this new app I’ve made, the login page could be set up to show any personal information or passwords I want to have readily available, but safely guarded by a username and password.</li>
+      <li>This app is less complex than the woodshop app, as it was made first. I fully customized its look and feel to my liking, similar to the woodshop app.</li>
     </ul>
   </div>
 
