--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ nav a:hover {
     <a href="keep_going_with_apps.html">Keep Going With Apps</a>
     <a href="spirals_and_battleship.html">Spirals and Battleship</a>
     <a href="car_clicker.html">Car Clicker</a>
-    <a href="Xcode.html">Login & Shop :)</a>
+    <a href="Xcode.html">Login & Shop</a>
   </nav>
 
   <h1>Alex Gong Portfolio</h1>
@@ -51,7 +51,7 @@ nav a:hover {
   <ul>
     <li>I am on the Varsity Water Polo team for the 3rd year where I am the team's starting Goalie.</li>
     <li>I am also on the Varsity diving team for the 3rd year. Last year I was on the conference and sectional teams.</li>
-    <li>I work as a Lifegaurd for the VHPD, teach swim lessons at my highschool, and I coach part of the VHPD swim team that I swam on as a kid..</li>
+    <li>I work as a Lifegaurd for the VHPD, teach swim lessons at my highschool, and I coach part of the VHPD swim team that I swam on as a kid.</li>
   </ul>
   
   <script src="script.js"></script>
