--- a/Xcode.html
+++ b/Xcode.html
@@ -42,6 +42,7 @@
     <a href="spirals_and_battleship.html">Spirals and Battleship</a>
     <a href="car_clicker.html">Car Clicker</a>
     <a href="Xcode.html">Login & Shop</a>
+    <a href="Game.html">My Game</a>
   </nav>
 
 
