--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ nav a:hover {
     <a href="spirals_and_battleship.html">Spirals and Battleship</a>
     <a href="car_clicker.html">Car Clicker</a>
     <a href="Xcode.html">Login & Shop</a>
+    <a href="Game.html">My Game</a>
   </nav>
 
   <h1>Alex Gong Portfolio</h1>
